[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/tilemap/doors_locked_closed.png" type="Texture" id=1]
[ext_resource path="res://assets/tilemap/doors_locked_open.png" type="Texture" id=2]
[ext_resource path="res://scripts/items/Door.gd" type="Script" id=3]
[ext_resource path="res://prefabs/KeyUnlockable.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "close",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 26.1567

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.31616, 102.38 )

[node name="door" type="Node2D"]
script = ExtResource( 3 )
locked = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "close"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.463287, 0.92659 )
shape = SubResource( 2 )

[node name="door_body" type="KinematicBody2D" parent="."]

[node name="door_body_shape" type="CollisionShape2D" parent="door_body"]
rotation = 3.14159
scale = Vector2( 11.8868, -0.155011 )
shape = SubResource( 3 )

[node name="KeyUnlockable" parent="." instance=ExtResource( 4 )]
